operator/templates/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "{name}"
  labels:
    app: "{name}"
spec:
  selector:
    matchLabels:
      app: "{name}"
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: "{name}"
        tier: frontend
    spec:
      containers:
      - image: wordpress:6.2.1-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: "{name}-pv-claim"
