operator/templates/wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "{name}"
  labels:
    app: "{name}"
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: {name}
    tier: frontend
  clusterIP: None
