operator/templates/wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "{name}-ingress"
spec:
  rules:
    - host: "{hostname}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "{name}"
                port:
                  name: http
